# graph-displayer

./: BTC.csv  app.py  pyproject.toml
templates/: charts.html
